tests/neg-custom-args/captures/leaking-iterators.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/leaking-iterators.scala:56:16 ----------------------------
56 |  usingLogFile: log => // error
   |                ^
   |Capability `log` outlives its scope: it leaks into outer capture set 's1 which is owned by method test.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (log: java.io.FileOutputStream^) ->'s2 cctest.Iterator[Int]^{log}
   |Required: java.io.FileOutputStream^ => cctest.Iterator[Int]^'s1
   |
   |where:    => refers to a root capability created in method test when checking argument to parameter op of method usingLogFile
   |          ^  refers to the root capability caps.any
   |
57 |    xs.iterator.map: x =>
58 |      log.write(x)
59 |      x * x
   |
   | longer explanation available when compiling with `-explain`
